Completando las vista con i18n

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,1 +1,53 @@
 nav.inicio=Homepage
+nav.idioma=Language
+nav.idioma.espanol=Spanish
+nav.idioma.ingles=English
+nav.nosotros=About us
+nav.ver-reserva=See reservation
+nav.iniciar-sesion=Login
+nav.cerrar-sesion=Logout
+footer.derecho-reservados=2024 HotelStiven. All rights reserved.
+carousel.neiva=A captivating city in the heart of Colombia, it offers a wide variety of accommodation to suit all tastes and budgets. From boutique hotels to comfortable lodges, here you'll find the perfect place to rest while exploring the natural and cultural wonders this region has to offer.
+carousel.medellin=A vibrant and welcoming city, it offers a wide range of accommodation to suit all tastes and budgets. From boutique hotels to cozy bed and breakfasts, each option promises a unique experience. Immerse yourself in the beauty and hospitality of this Colombian city as you explore its charming corners.
+carousel.cali=The "Salsa Capital of the World" invites you to enjoy its vibrant cultural scene and warm tropical climate. With a wide selection of accommodation, from luxurious hotels to cozy hostels, you'll find the perfect place to rest and explore the infectious energy of this Colombian city.
+sobrenosotros.p1=HotelStiven is more than just a place to stay; It's an experience. We provide exceptional service to our guests to ensure each stay is memorable. We offer a variety of accommodation options.
+sobrenosotros.p2=Our team is committed to excellence in every detail, from the comfort of our rooms to the quality of customer service. Whether for business or pleasure, HotelStiven will make your experience unforgettable.
+contacto=Contact
+contacto.nombre=Name
+contacto.correo=Email
+contacto.mensaje=Message
+contacto.enviar=Send
+login.inicio=Login
+login.usuario=User
+login.contrasena=Password
+login.iniciar=Login
+login.cuenta=You do not have an account?
+login.cuenta2=Sign up here
+login.terminos1=By signing up, you agree to our Terms and Conditions and Privacy Policy.
+login.terminos2=All rights reserved.
+registro=Register
+contacto.apellido=Last name
+registrarse=Check in
+tiene.cuenta=Do you already have an account?
+si.cuenta=Log in here
+ver.residencias=See residences
+crear.residencia=Create residence
+residencias=Residence List
+ver.id=ID
+ver.categoria=Category
+ver.ubicacion=Location
+ver.descripcion=Description
+ver.precio=Price
+ver.estado=State
+ver.imagen=Image
+ver.accion=Action
+nueva.residencia=New Residence
+guardar=Save
+cancelar=Cancel
+
+
+
+
+
+
+
