--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -1,1 +1,54 @@
-nav.inicio=inicio
+nav.inicio=Inicio
+nav.idioma=Idioma
+nav.idioma.espanol=Espa\u00F1ol
+nav.idioma.ingles=Ingles
+nav.nosotros=Sobre nosotros
+nav.ver-reserva=Ver reserva
+nav.iniciar-sesion=Iniciar sesi\u00F3n
+nav.cerrar-sesion=Cerrar sesi\u00F3n
+footer.derecho-reservados=2024 HotelStiven. Todos los derechos reservados.
+carousel.neiva=Una ciudad cautivadora en el coraz\u00F3n de Colombia, ofrece una amplia variedad de alojamientos para todos los gustos y presupuestos. Desde hoteles boutique hasta c\u00F3modos albergues, aqu\u00ED encontrar\u00E1s el lugar perfecto para descansar mientras exploras las maravillas naturales y culturales que esta regi\u00F3n tiene para ofrecer.
+carousel.medellin=Una ciudad vibrante y acogedora, ofrece una amplia gama de alojamientos para todos los gustos y presupuestos. Desde hoteles boutique hasta acogedores bed and breakfasts, cada opci\u00F3n promete una experiencia \u00FAnica. Sum\u00E9rgete en la belleza y la hospitalidad de esta ciudad colombiana mientras exploras sus encantadores rincones.
+carousel.cali=La \"Capital Mundial de la Salsa\", te invita a disfrutar de su vibrante escena cultural y su c\u00E1lido clima tropical. Con una amplia selecci\u00F3n de alojamientos, desde lujosos hoteles hasta acogedores hostales, encontrar\u00E1s el lugar perfecto para descansar y explorar la energ\u00EDa contagiosa de esta ciudad colombiana.
+sobrenosotros.p1=HotelStiven es m\u00E1s que un simple lugar para alojarse; es una experiencia. Brindamos un servicio excepcional a nuestros hu\u00E9spedes para asegurar que cada estancia sea memorable. Ofrecemos una variedad de opciones de alojamiento.
+sobrenosotros.p2=Nuestro equipo est\u00E1 comprometido con la excelencia en cada detalle, desde la comodidad de nuestras habitaciones hasta la calidad del servicio al cliente. Ya sea por negocios o por placer, HotelStiven har\u00E1 que tu experiencia sea inolvidable.
+contacto=Contacto
+contacto.nombre=Nombre
+contacto.correo=Correo electr\u00F3nico
+contacto.mensaje=Mensaje
+contacto.enviar=Enviar mensaje
+login.inicio=Inicio de sesi\u00F3n
+login.usuario=Usuario
+login.contrasena=Contrase\u00F1a
+login.iniciar=Iniciar sesi\u00F3n	
+login.cuenta=\u00BFNo tienes una cuenta?
+login.cuenta2=Reg\u00EDstrate aqu\u00ED
+login.terminos1=Al registrarse, aceptas nuestros T\u00E9rminos y condiciones y la Pol\u00EDtica de privacidad.
+login.terminos2=Todos los derechos reservados.
+registro=Registro
+contacto.apellido=Apellido
+registrarse=Registrarse
+tiene.cuenta=\u00BFYa tienes una cuenta?
+si.cuenta=Inicia sesi\u00F3n aqu\u00ED
+ver.residencias=Ver residencias
+crear.residencia=Crear residencia
+residencias=Lista residencias
+ver.id=ID
+ver.categoria=Categ\u00F3r\u00EDa
+ver.ubicacion=Ubicaci\u00F3n
+ver.descripcion=Descripci\u00F3n
+ver.precio=Precio
+ver.estado=Estado
+ver.imagen=Imagen
+ver.accion=Acci\u00F3n
+nueva.residencia=Nueva Residencia
+guardar=Guardar
+cancelar=Cancelar
+
+
+
+
+
+
+
+
