Mejorando el frontend

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -44,10 +44,11 @@ ver.accion=Action
 nueva.residencia=New Residence
 guardar=Save
 cancelar=Cancel
-
-
-
-
-
-
+busca.rapido=Fast search
+mensaje.busca.rapido=Look between 5 million hotels in seconds
+compara.confianza=Compare with confidence
+compara.precios=Compare hotels from hundreds of pages at the same time
+ahorra.grande=Save big
+pagina.asociada=Discover incredible offers in our associated pages
+ver.habitaciones=See rooms
 
