--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -44,9 +44,13 @@ ver.accion=Acci\u00F3n
 nueva.residencia=Nueva Residencia
 guardar=Guardar
 cancelar=Cancelar
-
-
-
+busca.rapido=Busca r\u00E1pido
+mensaje.busca.rapido=Busca entre 5 millones de hoteles en segundos
+compara.confianza=Compara con confianza
+compara.precios=Compara precios de hoteles de cientos de p\u00E1ginas al mismo tiempo
+ahorra.grande=Ahorra a lo grande
+pagina.asociada=Descubre incre\u00EDbles ofertas en nuestras p\u00E1ginas asociadas
+ver.habitaciones=Ver habitaciones
 
 
 
