Agregando EstadosEntity y diseñando vistas

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -37,6 +37,7 @@ ver.id=ID
 ver.categoria=Category
 ver.ubicacion=Location
 ver.descripcion=Description
+ver.telefono=Phone
 ver.precio=Price
 ver.estado=State
 ver.imagen=Image
@@ -51,4 +52,15 @@ compara.precios=Compare hotels from hundreds of pages at the same time
 ahorra.grande=Save big
 pagina.asociada=Discover incredible offers in our associated pages
 ver.habitaciones=See rooms
+editar=Edit
+eliminar=Delete
+crear.habitacion=Create room
+
+
+
+
+
+
+
+
 
