--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -34,9 +34,10 @@ ver.residencias=Ver residencias
 crear.residencia=Crear residencia
 residencias=Lista residencias
 ver.id=ID
-ver.categoria=Categ\u00F3r\u00EDa
+ver.categoria=Categor\u00EDa
 ver.ubicacion=Ubicaci\u00F3n
 ver.descripcion=Descripci\u00F3n
+ver.telefono=Tel\u00E9fono
 ver.precio=Precio
 ver.estado=Estado
 ver.imagen=Imagen
@@ -51,6 +52,17 @@ compara.precios=Compara precios de hoteles de cientos de p\u00E1ginas al mismo t
 ahorra.grande=Ahorra a lo grande
 pagina.asociada=Descubre incre\u00EDbles ofertas en nuestras p\u00E1ginas asociadas
 ver.habitaciones=Ver habitaciones
+editar=Editar
+eliminar=Eliminar
+crear.habitacion=Crear habitaci\u00F3n
+
+
+
+
+
+
+
+
 
 
 
