--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -55,12 +55,14 @@ ver.habitaciones=See rooms
 editar=Edit
 eliminar=Delete
 crear.habitacion=Create room
-
-
-
-
-
-
-
-
-
+ver.habitaciones=Bedrooms
+ver.habitaciones.usuario=See rooms per user
+ingrese.id.usuario=Enter the User ID
+ver.habitacion.residencia=See rooms by residence
+ingrese.id.residencia=Enter the ID of the Residence
+nueva.habitacion=New room
+residencia=Residence
+hab.residencia=Rooms by residence
+ID:ID
+habitaciones.usuarios=User rooms
+habitacion=Room
