--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -55,13 +55,17 @@ ver.habitaciones=Ver habitaciones
 editar=Editar
 eliminar=Eliminar
 crear.habitacion=Crear habitaci\u00F3n
-
-
-
-
-
-
-
+ver.habitaciones=Habitaciones
+ver.habitaciones.usuario=Ver habitaciones por usuario
+ingrese.id.usuario=Ingrese el ID del Usuario
+ver.habitacion.residencia=Ver habitaciones por residencia
+ingrese.id.residencia=Ingrese el ID de la Residencia
+nueva.habitacion=Nueva Habitaci\u00F3n
+residencia=Residencia
+hab.residencia=Habitaciones por residencia
+ID:ID
+habitaciones.usuarios=Habitaciones del Usuario
+habitacion=Habitacion
 
 
 
