--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -2,6 +2,7 @@ nav.inicio=Homepage
 nav.idioma=Language
 nav.idioma.espanol=Spanish
 nav.idioma.ingles=English
+nav.idioma.frances=French
 nav.nosotros=About us
 nav.ver-reserva=See reservation
 nav.iniciar-sesion=Login
