--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -2,6 +2,7 @@ nav.inicio=Inicio
 nav.idioma=Idioma
 nav.idioma.espanol=Espa\u00F1ol
 nav.idioma.ingles=Ingles
+nav.idioma.frances=Frances
 nav.nosotros=Sobre nosotros
 nav.ver-reserva=Ver reserva
 nav.iniciar-sesion=Iniciar sesi\u00F3n
