--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -2,6 +2,7 @@ nav.inicio=Page d'accueil
 nav.idioma=Langue
 nav.idioma.espanol=Espagnol
 nav.idioma.ingles=Anglais
+nav.idioma.frances=Fran\u00E7ais
 nav.nosotros=\u00C0 propos de nous
 nav.ver-reserva=Voir r\u00E9servation
 nav.iniciar-sesion=Se connecter
